@@ -1,0 +1,9 @@
+package edu.colorado.phet.simeventprocessor.scala
+
+/**
+ * @author Sam Reid
+ */
+
+case class Entry(actor: String, action: String, pair: Pair[String, String]*) {
+
+}
