@@ -1,3 +1,4 @@
+Started adding support for filtering based on relevant events
 Changes to support scala repl prototype
 Added instrumentation for monitoring server data as it is being collected
 Added build information and entry point for sim event processing for server monitoring
